--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "isShellCommand": true,
     "tasks": [
         {
-            "taskName": "default",
+            "taskName": "debug",
             "args": [],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
